# google-calendar-api

./: .deepsource.toml  .gitignore  README.md  app.py  auth.py  docker-compose.cli.yml  docker-compose.yml  environment.yml  nginx.conf  utils.py
.github/workflows/: codespell.yml  deploy.yml  python-app.yml  tests.yml
backend/: .coveragerc  .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.cli  Makefile  README.md  app.py  environment.yml  logger_config.py  pyproject.toml  pytest.ini  requirements-cli.txt  requirements.txt  tasks.py  terminal.py  test.py  tox.ini  utils.py
backend/.github/workflows/: codespell.yml
backend/creds/: credentials.temp.json
backend/docs/: api.MD
backend/src/: api.py  app.py  auth.py  cli.py  config.py  constants.py  error.py  exceptions.py  logger_config.py  mason.py  printer.py  terminal.py  utils.py  validators.py
backend/src/resources/: calendar.py  event.py
backend/src/services/: calendar.py  event.py
backend/templates/: calendar_list.html
backend/tests/: README.md  test_api.py  test_event.py  test_event_2.py  test_resources.py  test_services.py  test_terminal.py  test_utils.py  test_validators.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Calendars.tsx  DateTimePickerValue.tsx  Events.tsx  EventsTableAll.tsx  EventsTableUnique.tsx  Notification.tsx
frontend/src/services/: apiClient.ts  calendars.tsx  events.tsx
frontend/src/styles/: EventForm.css  EventsTable.css
frontend/src/types/: Calendar.tsx  NotificationProps.tsx  UpdateEventRequestBody.tsx
google-calendar-frontend/: .prettierrc  README.md  eslint.config.js  package-lock.json  package.json
google-calendar-frontend/src/: App.css  App.tsx  main.tsx  utils.ts
google-calendar-frontend/src/components/: Calendars.tsx  EventForm.tsx  EventTypes.tsx  EventTypesList.tsx  Events.tsx  EventsTableAll.tsx  EventsTableUnique.tsx  Filter.tsx
google-calendar-frontend/src/services/: calendars.tsx  events.tsx
google-calendar-frontend/src/styles/: Calendars.css  EventForm.css  Events.css  EventsTable.css  Notification.css
google-calendar-frontend/src/types/: Calendar.tsx  Event.tsx  EventTime.tsx
google-calendar-frontend/tests/: helloWorld.test.ts  utils.test.ts
static/: style.css
templates/: calendar_view.html
