[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcalapi"
version = "0.1.0"
readme = "README.md"
description = "Google Calendar client"
requires-python = "==3.12.3"
dependencies = [
    "gcalcli @ git+https://github.com/tpantsar/gcalcli.git",
    "Flask",
    "flask-restful",
    "flask-cors",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth",
    "InquirerPy",
    "typeguard",
    "gunicorn",
    "waitress",
    "parsedatetime",
    "babel",
    "python-dateutil",
]

[project.urls]
Repository = "https://github.com/tpantsar/google-calendar-api"
Issues = "https://github.com/tpantsar/google-calendar-api/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "invoke",
    "ruff",
]

[project.scripts]
gcalapi = "terminal:main"

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.ruff]
line-length = 90

[tool.ruff.lint]
# Enable Errors, Warnings, Flakes
select = ["E", "W", "F"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.extend-per-file-ignores]
"*.pyi" = ["E501"]